--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # OSX
 #
 .DS_Store
@@ -23,13 +22,11 @@ DerivedData
 *.xcuserstate
 project.xcworkspace
 
-# Android/IntelliJ
+# Android/IJ
 #
-build/
 .idea
 .gradle
 local.properties
-*.iml
 
 # node.js
 #
@@ -40,38 +37,4 @@ npm-debug.log
 buck-out/
 \.buckd/
 android/app/libs
-*.keystore
-
-# fastlane
-#
-# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
-# screenshots whenever they are needed.
-# For more information about the recommended setup visit:
-# https://github.com/fastlane/fastlane/blob/master/fastlane/docs/Gitignore.md
-
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
-=======
-*.idea
-.idea
-idea
-.DS_Store
-*.DS_Store
-
-lib-cov
-*.seed
-*.log
-*.csv
-*.dat
-*.out
-*.pid
-*.gz
-
-pids
-logs
-results
-
-node_modules
-npm-debug.log
->>>>>>> b1996ad073415b110c2a7c54ac30838b99f1dc79
+android/keystores/debug.keystore
